fix: bug fixed with backdrop overlay on IE

--- a/example/ocModal.light.css
+++ b/example/ocModal.light.css
@@ -3,7 +3,7 @@
 
 .modal-wrapper {
   z-index: 1050;
-  position: relative; }
+  position: fixed; }
   .modal-wrapper .modal-backdrop {
     opacity: 0.8;
     filter: alpha(opacity=80); }
